# PrizePicksML

./: .gitignore  README.md  pyproject.toml
data/artifacts/: demo_walkforward.json  nba_estimated_lines.csv  nba_player_games.csv  nba_training_rows.csv  walkforward_metrics.csv
docs/: BASELINE_LOGREG_SPEC.md  DATA_DICTIONARY.md  EDA_NOTEBOOK_OUTLINE.md  ETL_LAYOUT.md  FEATURE_SPEC.md  FINAL_REPORT_OUTLINE.md  FREEZE_APR15.md  INFERENCE_CHECKLIST.md  LEAKAGE_CHECKLIST.md  MODEL_SPEC.md  NAIVE_BASELINE.md  PRD.md  ROBUSTNESS_AND_ABLATIONS.md  WALK_FORWARD_SPEC.md
notebooks/: 01_eval_metrics.ipynb
scripts/: run_demo.py
src/pricepicks_ml/: __init__.py  baselines.py  calibration_util.py  evaluate.py  labels.py  nba_data.py  schemas.py  synthetic.py  train.py  walk_forward.py
src/pricepicks_ml/features/: __init__.py  builder.py  context.py  line_relative.py  opponent.py  rolling.py  time_adjusted.py
tests/: test_labels.py  test_nba_data.py  test_smoke_pipeline.py  test_walk_forward.py
